Small fix, add project

--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
         <div class="d-flex align-items-center justify-content-around pt-3"
           id="sect-2">
 
-          <div class="d-flex flex-column mt-5 col-md-6 col-6 col-sm-6 col-lg-4
-            text-justify justify-content-center">
-              <img
-                src="https://lh3.googleusercontent.com/pw/AM-JKLX8vKjtM-wxVE3CU8tgNBcxbV1_ojMdtfPB32dydVOJEIIoQnqANbY-0bPTRQRxgyBtlBg04dHMYQONO43rueGiLU3KdWsLi1ud6gr5tEyCrNreZEpLn5U1FnyHwrV6duzgLv0NxIOdFAU0pUFf8IdjYA=s800-no?authuser=0"
-                alt="..." class="img-thumbnail rounded-circle" id="profile-pic">
+          <div class="d-flex container flex-column mt-5 col-md-6 col-6 col-sm-6 col-lg-4
+            text-justify">
+        <div class="row  justify-content-center" >
+          <img
+            src="https://lh3.googleusercontent.com/pw/AM-JKLX8vKjtM-wxVE3CU8tgNBcxbV1_ojMdtfPB32dydVOJEIIoQnqANbY-0bPTRQRxgyBtlBg04dHMYQONO43rueGiLU3KdWsLi1ud6gr5tEyCrNreZEpLn5U1FnyHwrV6duzgLv0NxIOdFAU0pUFf8IdjYA=s800-no?authuser=0"
+            alt="..." class="img-thumbnail rounded-circle" id="profile-pic">
+        </div>
+
               <h1 class="display-4 fw-normal text-sm-center text-md-center"> About Me.</h1>
               <p class="text-sm-center text-md-center  text-lg-start"> I'm a Computer Systems Engineer studying
                 a Masters in Data Science. I have previous experience in Industrial Automation, but now I focus in Artificial Intelligence and Data
@@ -130,6 +133,19 @@
                 </div>
                 <div class="flex-row">
                   <div class="card-group d-flex flex-nowrap overflow-auto   mx-auto w-75">
+                    <div class="card mx-1" id="project-tile">
+                      <div class="card-header">
+                        <a
+                          href="https://botonrate.web.app"
+                          target="_blank" rel="noopener noreferrer"> <img
+                            src="https://lh3.googleusercontent.com/pw/AM-JKLUA22Kplll77KL5NxeWViRSwmX2BaLExD8lLTXUO8YYmenFaR2F204WBlEyxNeN-Z86V6BeFLsG0BZUDSGzjJKHhCjqINUY1_od_H8nnHUgcYyJgiHqHcSh_ydJrrMIegtUhDsZDr3Zf2vjVJobzGpkxw=w958-h632-no"
+                            class="card-img-top" alt="..."></a>
+                      </div>
+                      <div class="card-body">
+                        <p class="card-title display-8 fw-bold">ratingg</p>
+                        <p class="card-text">A web app to evaluate restaurant service quality, the waiter gives the client a device with this page open so they can rate the service. Also you can check your rating stats and records. Built with Svelte</p>
+                      </div>
+                    </div>
                     <div class="card mx-1" id="project-tile">
                       <div class="card-header">
                         <a
